HappyPoker_assets/logs/logger_baseapp.2019-06-19.log
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 116] - -----------------------------------------------------------------------------------------


    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 116] - Resmgr::initialize: KBE_ROOT=D:/kbengine/
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 117] - Resmgr::initialize: KBE_RES_PATH=D:/kbengine/kbe/res/;D:/kbengine/HappyPoker_assets/;D:/kbengine/HappyPoker_assets/scripts/;D:/kbengine/HappyPoker_assets/res/
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 117] - Resmgr::initialize: KBE_BIN_PATH=D:/kbengine/kbe/bin/server/
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 132] - NetworkInterface::initialize(EXTERNAL-TCP): bound to all interfaces with default route interface on 192.168.56.1 ( 192.168.56.1:20015 )
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 132] - NetworkInterface::initialize(EXTERNAL-TCP): address 192.168.56.1:20015, SOMAXCONN=128.
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 135] - NetworkInterface::initialize(EXTERNAL-UDP): bound to all interfaces with default route interface on 192.168.56.1 ( 192.168.56.1:20005 )
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 136] - NetworkInterface::initialize(EXTERNAL-UDP): address 192.168.56.1:20005, SOMAXCONN=128.
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 139] - NetworkInterface::initialize(INTERNAL-TCP): bound to all interfaces with default route interface on 192.168.56.1 ( 192.168.56.1:49810 )
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 140] - NetworkInterface::initialize(INTERNAL-TCP): address 192.168.56.1:49810, SOMAXCONN=128.
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 140] - server-configs:
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 140] - 	gameUpdateHertz : 10
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 140] - 	entryScriptFile : kbemain
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 140] - 	internalTcpAddr : 192.168.56.1:49810
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 140] - 	externalTcpAddr : 192.168.56.1:20015
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 140] - 	externalUdpAddr : 192.168.56.1:20005
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 141] - 	componentID : 7001
 WARNING    baseapp-1 3960 7001  [2019-06-19 19:33:00 345] - invalid UID(0) <= 0, please check UID for environment! automatically set to 3960.
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 650] - Components::findLogger: found logger, addr:192.168.56.1:49806
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 650] - Components::addComponent: reset orderLog, uid=3960!
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 650] - Components::addComponent[logger], uid=3960, componentID=2000, globalorderid=1, grouporderid=1, totalcount=1
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 654] - ---- baseapp Version: 2.4.5. ScriptVersion: 0.1.0. Pythoncore: 3.7.3. Protocol: DCFA95A4364DC44A8B8A14D3936CBE92. Config: Debug X86. Built: 09:56:40 May  8 2019. AppID: 7001. UID: 3960. PID: 4228 ----
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 655] - Server error_name: Intel(R) Core(TM) i5-6300HQ CPU @ 2.30GHz with 2097151kB RAM
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 655] - ThreadPool::createThreadPool: creating  threadpool...
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 655] - ThreadPool::createThreadPool: successfully(2), newThreadCount=1, normalMaxThreadCount=2, maxThreadCount=8
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 856] - Script::install(): is successfully, Python=(3.7.3 (default, May  8 2019, 09:53:38) [MSC v.1916 32 bit (Intel)])!
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 856] - Script::install(): KBExtra is successfully!
   S_ERR    baseapp-1 3960 7001  [2019-06-19 19:33:00 943] -   File "D:/kbengine/HappyPoker_assets/scripts/base\Room.py", line 36
    if entity.id=entityID:
                ^
SyntaxError: invalid syntax
   ERROR    baseapp-1 3960 7001  [2019-06-19 19:33:00 948] - app::initialize(): initialization failed!
    INFO    baseapp-1 3960 7001  [2019-06-19 19:33:00 956] - Script::uninstall(): is successfully!
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:00 956] - ThreadPool::destroy(): starting size 2.
 WARNING    baseapp-1 3960 7001  [2019-06-19 19:33:01 282] - ThreadPool::destroy(): waiting for thread(2)[0x245cd88,0x245c290,], try=1
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 718] - TPThread::~TPThread(): 0x245cd88
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 718] - TPThread::~TPThread(): 0x245c290
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 719] - ThreadPool::destroy(): successfully!
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 719] - Bundle::destroyObjPool(): size 13.
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 720] - Channel::destroyObjPool(): size 15.
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 720] - TCPPacket::destroyObjPool(): size 0.
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 743] - UDPPacket::destroyObjPool(): size 14.
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 743] - EndPoint::destroyObjPool(): size 15.
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 743] - Address::destroyObjPool(): size 0.
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 744] - TCPPacketReceiver::destroyObjPool(): size 0.
   DEBUG    baseapp-1 3960 7001  [2019-06-19 19:33:01 744] - UDPPacketReceiver::destroyObjPool(): size 0.
